--- a/.gitignore
+++ b/.gitignore
@@ -1,52 +1,25 @@
-# Prerequisites
-*.d
+#include "stdio.h"
+#include "conio.h"
 
-# Object files
-*.o
-*.ko
-*.obj
-*.elf
-
-# Linker output
-*.ilk
-*.map
-*.exp
-
-# Precompiled Headers
-*.gch
-*.pch
-
-# Libraries
-*.lib
-*.a
-*.la
-*.lo
-
-# Shared objects (inc. Windows DLLs)
-*.dll
-*.so
-*.so.*
-*.dylib
-
-# Executables
-*.exe
-*.out
-*.app
-*.i*86
-*.x86_64
-*.hex
-
-# Debug files
-*.dSYM/
-*.su
-*.idb
-*.pdb
-
-# Kernel Module Compile Results
-*.mod*
-*.cmd
-.tmp_versions/
-modules.order
-Module.symvers
-Mkfile.old
-dkms.conf
+    int main ()
+    //declaração de variaveis
+    float n1,n2,m;
+{
+    // entrada de dados
+        printf("digite a nota1:");
+    scanf("%f",&n1);
+        printf("digite a nota2 :");
+    scanf("%f",&n2);
+    //processamento
+    m=(n1+n2)/2;
+    //saída
+        printf("a media e:%.2f,\n",m);
+    //condicionais 
+    if(m>=5){
+        printf("aluno aprovado");
+    }
+    else{
+        printf("aluno reprovado");
+    }
+    return 0;
+}
